<resources>
    <string name="app_name">Organ Donation India</string>
    <string name="app_display_name">Organ Donation India</string>
    <string name="counselor">Counselor Login</string>
    <string name="eye_bank">Eye Banks</string>
    <string name="skin_bank">Skin Banks</string>
    <string name="body_donation">Body Donation</string>
    <string name="donation_hospital">Donation Hospitals</string>
    <string name="ngo">NGOs in Organ Donation</string>
    <string name="transplant_center">Transplant Centres</string>
    <string name="faq">FAQ\'s</string>
    <string name="pledge_your_organ">Pledge your organs</string>
    <string name="join_members">Become a Member</string>
    <string name="hintUser">UserName</string>
    <string name="hintPass">Password</string>
    <string name="login">SIGN IN</string>
    <string name="info">Organ Donation Helpline 180073100 </string>
    <string name="register">Register</string>
    <string name="login_screen_second_heading">DONATION</string>
    <string name="login_screen_first_heading">ORGAN</string>
    <string name="title_activity_faq_brain_dead">Brain Dead</string>
    <string name="large_text">

        "1. When is a patient declared dead?\n\n"
        "A person may be declared dead due to Cardiac Arrest or due to Brain Death.\n\n\"

        "2. What is brain death?\n\n"
        "The main causes of brain death are tumor in the brain, trauma, and intra-cerebral hemorrhage. The brain stem which is at the base of our brain stops functioning. This means that the person cannot breathe on his own and his heart will stop beating. Brain death is irreversible.\n\n"

        "3. What tests are done to confirm irreversible damage to brain stem?\n\n "
        "There are a series of clinical tests listed in the Transplantation of Human Organs Act that the doctors perform. These tests are basically to confirm that there is irreversible damage to the brain stem and involve cranial nerve testing and apnea testing.\n\n"
        "The protocol of brain death declaration to proclaim death is the same - organ donation or no organ donation. Time of death is second apnoea test.\n\n"

        "4. Who explains to the family about the brain death?\n\n "
        "The doctor (Intensivist/ neurologist/neurosurgeon) who is treating the patient will explain to the family about brain death. The family can approach the grief counselor of the hospital, the transplant coordinator and nursing staff of the ICU for clarifications about brain death. They can approach NGOs who deal with organ donation for help.\n\n"

        "5. Why can organs of a brain dead patient be used for transplantation and not those of a patient who has died of a cardiac arrest?\n\n\"
        "Solid organ donation (heart, lungs, liver, pancreas, kidneys) requires blood circulation to be maintained in these organs until retrieval. This is possible only in brain death where the functioning of these organs can be supported for some time.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_faq_liver">Liver</string>
    <string name="large_text_liver">


       "1.	What are the functions of Liver\n\n"

"Liver has multiple functions there are :\n\n"
"• Synthesis of bile, glycogen, blood protiens, lipids.\n"
"• Regulation of amino acids levels in blood and blood clotting.\n"
"• Detoxicification of medicine, alcohol.\n"
"• Storage of fat soluble vitamins, iron and copper.\n"
"• Excretion of excess bile salts and biulirubin\n\n"


"2.	What important functions are affected by severe, acute, or chronic liver disease?\n\n"
"Blood clotting, Elimination of water, salt, drugs, and toxins from the body and Manufacture of blood proteins get affected due to liver disease.\n\n"

"3.	What is MELD ?\n\n"
"It is a method for allocation of  liver from a deceased donor. Model for End-Stage Liver Disease (MELD) score ranges from 6 to 40. The doctors calculate the  score based on clinical  criteria.  Livers are allocated based on MELD scores. People with higher MELD scores generally are offered donated livers first..\n\n"

"4.	Who may be Considered as a Living Donor Liver Transplantation?\n\n"
"Any person between the ages of 18-50 can donate a portion of his liver provided it is compatible to the recipent. Tranplant  surgeon  prefer close relatives as donors. The donor should not suffer from heart disease, kidney disease, liver disease and cancer. The donor should have negative  viral markers for HIV/HBsAg and HCV.\n\n"

"5.	What is the time period for recovery after liver transplantation in the intensive care unit in the hospital?\n\n"

"A liver transplant recipient will be in intensive care to minimum of a week monitored 24hrs and it may also vary according to the health level of that person. The recipient will be discharged only after fitness to stay without the need of medical team.\n\n"

"6.	Can  a living relative be a liver donor ?\n\n"
"A healthy family member who is willing to donate a part of his/ her liver can donate if the liver matches. Usually it may be parents, sibling, children, and grandparents. It also enfolds certain legal procedures and approval from an Authorisation committee.\n\n"




    </string>
    <string name="title_activity_faq_kidney">Kidney</string>
    <string name="large_text_kidney">


        "1.How can I register for a kidney transplant?\n\n"
        "Approach a government approved transplant hospital, register in that hospital on the transplant waiting list. The hospital will have a transplant coordinator who will assist you in registering under the State Authority of Cadaver Transplant Program. There will be some fees to be paid in demand draft to the State Authority. Once you are registered you will receive a waitlist number and you can check your status online. You cannot register in more than one hospital in one state\n\n"

        "2.	If I join MOHAN Foundation will you be able to find a kidney for me?\n\n"
        "No, MOHAN Foundation will not be able to find a kidney for you but we will guide you on how to register in a hospital and be put on the cadaver kidney waiting list.\n\n"

        "3.	What is the punishment for buying, selling and assisting in kidney procurement?\n\n"
        "THO 2011 Amendment has increased the punishment. Commercial dealing in organs, falsification of documents:  5 – 10 years imprisonment and Rs. 20 Lakh – 1 crore in penalty.\n\n"
        "4.	I am giving a kidney to my sister/brother what tests will I have to undertake? \n\n"

        "The family member who requires a kidney should be registered with a kidney transplant hospital. The doctors there will advise you on how to go ahead. As a donor, your blood will be tested (HLA typing) to establish that you are related to the recipient and are compatible. You should be in good physical and emotional health.\n\n"

        "You will have a thorough medical, surgical and psychological assessment to establish that you are fit and healthy to donate. A number of people who wish to donate find that they are not able to do so because health problems are discovered through the assessment process.\n\n"

        "5.	How can I get a kidney for my friend?\n\n"
        "There are three types of kidney donation.\n\n"
        "LIVE RELATED DONATION:  Living donation takes place when a living person donates an organ (or part of an organ) for transplantation to another person. The living donor can be a family member, such as a parent, child, brother or sister, grandparent or grandchild (living related donation).\n\n"
        "LIVE UNRELATED DONATION: Living donation can also come from someone who is emotionally related to the recipient, such as a good friend, a relative, a neighbour or an in-law (living unrelated donation).\n\n"
        "DECEASED ORGAN DONATION: The patient has to register in a hospital that does kidney transplants. The patient will be put on a kidney waitlist. As and when a kidney from an appropriate deceased donor (brain death) is available, the patient will be intimated.\n\n"
        "The hospital where the transplant will take place will have a qualified transplant coordinator who will guide the patient in the process.\n\n"




    </string>
    <string name="title_activity_faq_organ_doantion">Organ Donation</string>
</resources>