<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mohanfoundation.mohanfoundation.HomeScreen"
    tools:showIn="@layout/activity_home_screen">

    <Button
        android:text="@string/skin_bank"
        android:layout_height="wrap_content"
        android:id="@+id/btn_skin_banks"
        android:layout_width="200dp"
        android:background="@drawable/button_bg_transparent"
        android:layout_below="@+id/btn_eye_banks"
        android:layout_alignStart="@+id/btn_eye_banks"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/eye_bank"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_bg_transparent"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/btn_eye_banks"
        android:layout_width="200dp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/body_donation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_body_donation"
        android:background="@drawable/button_bg_transparent"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_below="@+id/btn_skin_banks"
        android:layout_alignStart="@+id/btn_skin_banks" />

    <Button
        android:text="@string/donation_hospital"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ngo_list"
        android:background="@drawable/button_bg_transparent"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_below="@+id/btn_body_donation"
        android:layout_alignStart="@+id/btn_body_donation"
        android:layout_marginTop="12dp" />

    <Button
        android:text="@string/ngo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_transplant_centres"
        android:background="@drawable/button_bg_transparent"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btn_ngo_list"
        android:layout_alignStart="@+id/btn_ngo_list" />

    <Button
        android:text="@string/transplant_center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_donation_hospitals"
        android:background="@drawable/button_bg_transparent"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/btn_transplant_centres"
        android:layout_alignStart="@+id/btn_transplant_centres" />

    <TextView
        android:text="@string/join_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_join_members"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_faq"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/pledge_your_organ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_pledge"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_donation_hospitals"
        android:layout_marginStart="24dp" />

</RelativeLayout>
